test/force-app/main/default/objects/Operations_and_Maintenance__c/Operations_and_Maintenance__c.object-meta.xml
<CustomObject>
    <label>Operations and Maintenance</label>
    <nameField>
        <label>Operations and Maintenance Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Operations and Maintenance</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>