test/force-app/main/default/objects/Operations_and_Maintenance__c/fields/Asset_Management__c.field-meta.xml
<CustomField>
    <fullName>Asset_Management__c</fullName>
    <label>Asset Management</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>