test/force-app/main/default/objects/Operations_and_Maintenance__c/fields/Assumption_Set__c.field-meta.xml
<CustomField>
    <fullName>Assumption_Set__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assumption Set</label>
    <referenceTo>Assumption_Set__c</referenceTo>
    <relationshipLabel>Operations and Maintenance</relationshipLabel>
    <relationshipName>Operations_and_Maintenance</relationshipName>
    <type>Lookup</type>
</CustomField>