test/force-app/main/default/objects/Operations_and_Maintenance__c/fields/Unplanned_Maintenance__c.field-meta.xml
<CustomField>
    <fullName>Unplanned_Maintenance__c</fullName>
    <label>Unplanned Maintenance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>